Correction orthographique textes projets

--- a/projet1.html
+++ b/projet1.html
@@ -54,7 +54,7 @@
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
                     <h2>Genèse projet</h2>
-                    <p>J'ai eu le plaisir de travailler avec le café hugo situé Place des Vosges. Durant ma collaboration avec eux, j'ai pu tout d'abord déssinné un set de table présent dans tous le restaurant, représentant le lieu avec ses habitués, sa magie et son atmosphère. J'ai en complément de ce set pu créer leur nouveau logo, inspiré des arches emblématiques de la Place, ainsi que leurs nouvelles cartes inspirés des bistrots parisens mais aussi des motifs fleuris visible sur le plafond la salle du bar. Une d.a totalement signée Lidia en toute sommes ! Ce travail était mon premier projet professionel, et ça a été une joie de travailler dessus. </tr></p>
+                    <p>J'ai eu le plaisir de travailler avec le Café Hugo situé Place des Vosges. Durant ma collaboration avec eux, j'ai tout d'abord dessiné un set de table présent dans tout le restaurant, représentant le lieu avec ses habitués, sa magie et son atmosphère. J'ai en complément de ce set créé leur nouveau logo, inspiré des arches emblématiques de la Place, ainsi que leurs nouvelles cartes inspirées des bistrots parisiens mais aussi des motifs fleuris visibles sur le plafond de la salle du bar. Une direction artistique totalement signée Lidia en somme ! Ce travail était mon premier projet professionnel, et ça a été une joie de travailler dessus.</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Les sets de tables et son dessin sont beaucoup appréciés par les habitués commes les touristes : les clients les colories, les prennent en photo, et certains en demande de nouveau pour les ramener chez eux ! Le dessin figure aussi sur la carte de visite du café ainsi que les mugs, et un projet de t-shirt est en cours de création avec le dessin. La carte elle a vécu un renouveau graphique qui lui permet d'être en total harmonie avec la nouvelle direction artistique sensible et élégante du lieu.</p>
+                <p>Les sets de table et leur dessin sont beaucoup appréciés par les habitués comme par les touristes : les clients les colorient, les prennent en photo, et certains en demandent de nouveaux pour les ramener chez eux ! Le dessin figure aussi sur la carte de visite du café ainsi que sur les mugs, et un projet de t-shirt est en cours de création avec le dessin. La carte a vécu un renouveau graphique qui lui permet d'être en totale harmonie avec la nouvelle direction artistique sensible et élégante du lieu.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
