--- a/projet2.html
+++ b/projet2.html
@@ -54,7 +54,7 @@
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
                     <h2>Genèse projet</h2>
-                    <p>Depuis petite je suis passionée de dessin. J'ai pu explorer beaucoup de médium, j'affectionne beaucoup l'aquarelle et le dessin digital, mais en ce moment j'ai une légère obsession pour la peinture acrylique, qui permet d'expérimenter avec les couleurs et les formes, tout en étant permisse sur les erreurs qui sont faciles a réctifer, et qui souvent même sublime le dessin.</tr></p>
+                    <p>Depuis petite, je suis passionnée de dessin. J'ai pu explorer beaucoup de médiums, j'affectionne beaucoup l'aquarelle et le dessin digital, mais en ce moment j'ai une légère obsession pour la peinture acrylique, qui permet d'expérimenter avec les couleurs et les formes, tout en étant permissive sur les erreurs qui sont faciles à rectifier, et qui souvent même subliment le dessin.</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Mon style de dessin est en constant changement, et je ne me laisse pas enfermer dans une "boîte" qui ne me laisserait pas expérimenter. J'aime le réalisme mais aussi le surréalisme et les dessins plus enfantins, "naifs". L'art est si beau car ils nous permet de s'exprimer de la façon qui nous convient le mieux, à un moment t.</p>
+                <p>Mon style de dessin est en constant changement, et je ne me laisse pas enfermer dans une "boîte" qui ne me laisserait pas expérimenter. J'aime le réalisme mais aussi le surréalisme et les dessins plus enfantins, "naïfs". L'art est si beau car il nous permet de nous exprimer de la façon qui nous convient le mieux, à un moment T.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
