--- a/projet3.html
+++ b/projet3.html
@@ -54,7 +54,7 @@
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
                     <h2>Genèse projet</h2>
-                    <p>Durant mon cursus étudiant, j'ai pu durant 6 mois participer à des cours d'illustration, de direction artisique ainsi que de design au sein de l'école intuit.lab situé à Paris. J'ai pu aussi durant mon ersamus réalisé plusieurs supports visuels nécessaires aux différents devoirs. Le programme TEMA à Neoma m'a aussi permis d'exprimé ma fibre créative.</tr></p>
+                    <p>Durant mon cursus étudiant, j'ai pu pendant 6 mois participer à des cours d'illustration, de direction artistique ainsi que de design au sein de l'école Intuit.lab située à Paris. J'ai aussi durant mon Erasmus réalisé plusieurs supports visuels nécessaires aux différents devoirs. Le programme TEMA à Neoma m'a également permis d'exprimer ma fibre créative.</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Ci-dessus mes réalisations pour des devoirs concernant des affiches (pour un jeu imaginé ou encore le Hellfest). Ci-dessous un des exercices que j'ai préféré, la création de pochettes de vinyles pour nos artistes préférés. C'est un des premiers exercices qui m'a vraiment poussé vers la découverte de soi et le test de différents styles visuels dont je n'avais pas l'habitude ni les codes.</p>
+                <p>Ci-dessus, mes réalisations pour des devoirs concernant des affiches (pour un jeu imaginé ou encore le Hellfest). Ci-dessous, un des exercices que j'ai préférés : la création de pochettes de vinyles pour nos artistes préférés. C'est un des premiers exercices qui m'a vraiment poussée vers la découverte de soi et le test de différents styles visuels dont je n'avais pas l'habitude ni les codes.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
