Correction orthographique textes projets

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
                         <img src="assets/images/photo-lidia.png" alt="Photo Lidia">
                     </div>
                     <div class="about-intro-text">
-                        <p class="display">Bonjour, je suis <span class="highlight-bg">Lidia</span>, designer graphique et illustratrice franco-polonaise.</p>
-                        <p class="display">Depuis toujours, le dessin est mon langage : un moyen de donner forme aux émotions, de raconter des histoires et de transformer une idée en un univers visuel <span class="circle-about">sensible</span> et <span class="souslignage-about">vivant</span>.</p>
+                        <p class="display">Depuis toujours, le dessin est mon langage : un moyen de donner forme aux émotions, raconter des histoires & d'illustrer un <span class="circle-about">projet</span>, une idée en univers visuel <span class="souslignage-about">unique</span>.</p>
+                        <p class="display">- <span class="highlight-bg">Lidia</span>, illustratrice & graphiste franco-polonaise.</p>
                     </div>
                 </div>
             </section>
@@ -58,8 +58,8 @@
             <!-- SECTION PHILOSOPHIE : Texte + Image (50/50) - Fond #EDEDED -->
             <section class="about-philosophy">
                 <div class="about-text">
-                    <h3>ma philosophie</h3>
-                    <p>J'aborde chaque projet avec attention et sensibilité, en prenant le temps d'écouter, de comprendre et de créer. Je conçois le design comme un espace de collaboration, où l'illustration, la narration et le sens sont au cœur du processus. Loin des solutions standardisées, je cherche à traduire l'essence d'un projet de manière juste, humaine et durable.</p>
+                    <h3>mon approche</h3>
+                    <p>J'aborde chaque commande avec attention, en prenant le temps d'écouter, de comprendre et de créer. Je conçois le design comme un espace de collaboration, où la narration, le sens & le projet sont au cœur du processus. Adepte du sur-mesure, je cherche avant tout à traduire l'essence particulière d'un projet en accord avec le commanditaire. Curieuse et adaptable, je nourris mes créations d'influences multiples : voyages, musique, jeux vidéo, lieux et rencontres... afin de trouver le juste équilibre entre esthétique et émotion.</p>
                 </div>
                 <div class="about-visual">
                     <img src="assets/gifs/about-philosophy.gif" alt="About philosophie gif">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="about-text">
                     <h3>concrètement</h3>
-                    <p>J'accompagne des projets à taille humaine dans la création d'identités visuelles illustrées et singulières. Mon travail mêle design graphique, illustration et direction artistique, sur des supports imprimés et digitaux. Récemment, j'ai eu la chance de réaliser un projet pour le Café Hugo, Place des Vosges à Paris, où mes illustrations vivent aujourd'hui sur les tables et la carte du lieu. Voir les client·es s'approprier ces images, les colorier, les emporter, a confirmé pour moi la valeur émotionnelle que peut porter une image. Curieuse et adaptable, je nourris mes créations d'influences multiples : voyages, musique, jeux vidéo, lieux et rencontres... afin de trouver le juste équilibre entre esthétique et émotion.</p>
+                    <p>Mon travail mêle design graphique, illustration et direction artistique, sur des supports imprimés et digitaux. En témoignent mes réalisations récentes pour le Café Hugo, Place des Vosges à Paris. Aujourd'hui mes illustrations animent set de tables et menus. Au final, les clients s'approprient ces images. Certains les colorient, d'autres les emportent en souvenir. C'est le signe que mes créations vivent.</p>
                 </div>
             </section>
     
@@ -84,7 +84,7 @@
     
             <!-- CITATION FINALE -->
             <section class="about-quote">
-                <h2>Parce que créer, c'est avant tout partager.</h2>
+                <h2>Parce qu'une création efficace, c'est une création qui accompagne un projet.</h2>
                 <div class="about-quote-visual">
                     <img src="assets/gifs/quote.gif" alt="quote">
                 </div>
