--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
                 <!-- 👈 Bloc texte à gauche -->
                 <div class="contact-text">
                     <p class="display">Une idée, une collaboration, une création ?</p>
-                    <p>Je serais ravie d'échanger autour de ton projet, de comprendre tes envies et de voir comment lui donner forme ensemble.</p>
-                    <p>Tu peux m'écrire directement par mail ou me retrouver sur les réseaux.</p>
+                    <p>Je serais ravie d'échanger autour de votre projet, de comprendre vos envies et de voir comment lui donner forme ensemble.</p>
+                    <p>Vous pouvez m'écrire directement par mail ou me retrouver sur les réseaux.</p>
                     
                     <!-- 👇 LIENS CLIQUABLES -->
                     <p class="display">
@@ -66,7 +66,7 @@
             </section>
 
             <section class="contact-quote">
-                <h1>Parce que créer, c’est avant tout partager.</h1>
+                <h1>Parce qu'une création efficace, c'est une création qui accompagne un projet.</h1>
 
 
                  <div class="ph ph--contact">
