--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="hero">
             <div class="container">
           <div class="hero-text">
-        <h1>des identités <span class="circle">sensibles</span>, pensées pour créer du <span class="souslignage">lien</span>.</h1> 
-        <p>Design et illustration pour des identités humaines et singulières.</p>
+        <h1>des créations graphiques<span class="circle">sur-mesure</span>, au service de vos<span class="souslignage">projets</span>.</h1> 
+        <p>Design et illustration pour des identités visuelles uniques.</p>
           </div>
           
           <div class="hero-visual">
@@ -80,8 +80,8 @@
              <article>
                 <div class="project-image"> <img src="../assets/images/index2.jpg"> </div>
                 <div class="project-text">
-                <h3>Mes réalisations personelles</h3>
-                <p>Exploration libre de différents médiums : aquarelle, digital et peinture acrylique. Un style en constant changement, entre réalisme et surréalisme, où l'expérimentation et l'expression personnelle guident chaque création.</p>
+                <h3>Mes réalisations étudiantes</h3>
+                <p>Réalisations créées durant mon cursus à Intuit.lab et Neoma : affiches, pochettes de vinyles et supports visuels variés. Des exercices qui m'ont permis de découvrir mon style et d'expérimenter avec de nouveaux codes graphiques.</p>
                 <a href="projet2.html">En savoir plus</a>
                 </div>
               </article>
@@ -90,8 +90,8 @@
           <article>
             <div class="project-image"> <img src="../assets/images/index3.jpg"> </div>
             <div class="project-text">
-            <h3>Projets d'école</h3>
-            <p>Réalisations créées durant mon cursus à Intuit.lab et Neoma : affiches, pochettes de vinyles et supports visuels variés. Des exercices qui m'ont permis de découvrir mon style et d'expérimenter avec de nouveaux codes graphiques.</p>
+            <h3>Mes réalisations personelles</h3>
+            <p>Exploration libre de différents médiums : aquarelle, digital et peinture acrylique. Un style en constant changement, entre réalisme et surréalisme, où l'expérimentation et l'expression personnelle guident chaque création.</p>
             <a href="projet3.html">En savoir plus</a>
             </div>
           </article>
@@ -102,8 +102,8 @@
         <!-- SECTION 3 : Mini about -->
          <section class="index-about">
           <div class="index-about-text">
-            <p class="display">j’aborde chaque projet avec attention et sensibilité, en prenant le temps d’écouter, de comprendre et de créer.</p>
-            <p class="display"> j’imagine des identités illustrées, construites main dans la main avec celles et ceux qui portent leurs projets, pour donner du sens et créer du lien.</p> 
+            <p class="display">j’aborde chaque commande avec attention, en prenant le temps d’écouter, de comprendre et de créer.</p>
+            <p class="display"> j’imagine des identités illustrées, construites main dans la main avec celles et ceux qui portent leurs projets.</p> 
             <a href="about.html">Découvrir mon approche</a>  
           </div> 
 
