--- a/projet1.html
+++ b/projet1.html
@@ -53,8 +53,8 @@
 
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
-                    <h2>Genèse projet</h2>
-                    <p>J'ai eu le plaisir de travailler avec le Café Hugo situé Place des Vosges. Durant ma collaboration avec eux, j'ai tout d'abord dessiné un set de table présent dans tout le restaurant, représentant le lieu avec ses habitués, sa magie et son atmosphère. J'ai en complément de ce set créé leur nouveau logo, inspiré des arches emblématiques de la Place, ainsi que leurs nouvelles cartes inspirées des bistrots parisiens mais aussi des motifs fleuris visibles sur le plafond de la salle du bar. Une direction artistique totalement signée Lidia en somme ! Ce travail était mon premier projet professionnel, et ça a été une joie de travailler dessus.</p>
+                    <h2>Le projet</h2>
+                    <p>J'ai réalisé un projet complet pour le Café Hugo, Place des Vosges : nouveau logo, set de table, carte. J'ai pu représenté ce lieu unique avec ses habitués, sa magie et son atmosphère. Un lieu de rencontre qui mélange histoire et architecture. Mes inspirations principales ont été les arches emblématiques de la Place & les motifs fleuris de la salle du bar. Ce travail a été mon premier projet professionnel, et ça a été une joie de travailler dessus.</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Les sets de table et leur dessin sont beaucoup appréciés par les habitués comme par les touristes : les clients les colorient, les prennent en photo, et certains en demandent de nouveaux pour les ramener chez eux ! Le dessin figure aussi sur la carte de visite du café ainsi que sur les mugs, et un projet de t-shirt est en cours de création avec le dessin. La carte a vécu un renouveau graphique qui lui permet d'être en totale harmonie avec la nouvelle direction artistique sensible et élégante du lieu.</p>
+                <p>Les sets de table et leur dessin sont beaucoup appréciés par habitués comme touristes. Les clients les colorient, d'autres les prennent en photo, et certains les ramenent chez eux ! Le dessin figure aussi sur la carte de visite du café ainsi que sur les mugs. La carte a vécu un renouveau graphique qui lui permet d'être en harmonie avec la nouvelle direction artistique élégante du lieu.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
