--- a/projet2.html
+++ b/projet2.html
@@ -39,7 +39,7 @@
             
             <!-- TITRE PROJET + DÉCO -->
             <div class="project-title">
-                <h1>Mes réalisations personelles</h1>
+                <h1>Mes réalisations étudiantes</h1>
                 <img src="assets/images/artsystar.png" alt="" class="project-deco">
             </div>
 
@@ -47,44 +47,44 @@
             <div class="project-intro">
                 <!-- Image hero à gauche (60%) -->
                 <div class="project-hero">
-                    <img src="assets/images/projet2/realisations-hero.jpg" alt="Baboushka">
+                    <img src="assets/images/projet3/ecole-hero.jpg" alt="15 arrondissement">
                     <!-- 📐 TAILLE RECOMMANDÉE : 1200x900px (ratio 4:3) -->
                 </div>
 
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
-                    <h2>Genèse projet</h2>
-                    <p>Depuis petite, je suis passionnée de dessin. J'ai pu explorer beaucoup de médiums, j'affectionne beaucoup l'aquarelle et le dessin digital, mais en ce moment j'ai une légère obsession pour la peinture acrylique, qui permet d'expérimenter avec les couleurs et les formes, tout en étant permissive sur les erreurs qui sont faciles à rectifier, et qui souvent même subliment le dessin.</p>
+                    <h2>Le projet</h2>
+                    <p>Durant mon cursus étudiant, j'ai pendant 6 mois participer à des cours d'illustration, de direction artistique et de design au sein Intuit.lab. J'ai aussi durant mon Erasmus à Rotterdam réalisé plusieurs supports visuels nécessaires à différents projets. Le programme TEMA à Neoma m'a également permis d'exprimer ma fibre créative.</p>
                 </div>
             </div>
 
             <!-- IMAGE PLEINE LARGEUR -->
             <div class="project-full-image">
-                <img src="assets/images/projet2/realisations-full.jpg" alt="paysage aquarelle">
+                <img src="assets/images/projet3/ecole-full.jpg" alt="affiches">
                 <!-- 📐 TAILLE RECOMMANDÉE : 1400x800px (ratio 16:9) -->
             </div>
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Mon style de dessin est en constant changement, et je ne me laisse pas enfermer dans une "boîte" qui ne me laisserait pas expérimenter. J'aime le réalisme mais aussi le surréalisme et les dessins plus enfantins, "naïfs". L'art est si beau car il nous permet de nous exprimer de la façon qui nous convient le mieux, à un moment T.</p>
+                <p>Ci-dessus, mes réalisations pour des devoirs concernant des affiches (pour un jeu imaginé ou encore le Hellfest). Ci-dessous, un des exercices que j'ai préférés : la création de pochettes de vinyles pour nos artistes préférés. C'est un des premiers exercices qui m'a vraiment poussée vers la découverte de soi et le test de différents styles visuels dont je n'avais pas l'habitude ni les codes.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
             <div class="project-gallery">
                 <div class="gallery-item">
-                    <img src="assets/images/projet2/realisations-1.jpg" alt="Fille dans l'eau acrylique">
+                    <img src="assets/images/projet3/ecole-1.jpg" alt="Grimes">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet2/realisations-2.jpg" alt="Chiot mignon acrylique">
+                    <img src="assets/images/projet3/ecole-2.jpg" alt="Lil Peep">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet2/realisations-3.jpg" alt="Chat de l'espace acrylique">
+                    <img src="assets/images/projet3/ecole-3.jpg" alt="The Neighbourhood">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet2/realisations-4.jpg" alt="Perle acrylique">
+                    <img src="assets/images/projet3/ecole-4.jpg" alt="Tame Impala">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
             </div>
