--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
                         <div class="project-image">
                             <img src="assets/images/projet3.jpg" alt="Projet 3">
                         </div>
-                        <h3>Projets d'école</h3>
+                        <h3>Mes réalisations étudiantes</h3>
                     </a>
                 </article>
     
