--- a/projet3.html
+++ b/projet3.html
@@ -39,7 +39,7 @@
             
             <!-- TITRE PROJET + DÉCO -->
             <div class="project-title">
-                <h1>Mes projets d'école</h1>
+                <h1>Mes réalisations personelles</h1>
                 <img src="assets/images/artsystar.png" alt="" class="project-deco">
             </div>
 
@@ -47,44 +47,44 @@
             <div class="project-intro">
                 <!-- Image hero à gauche (60%) -->
                 <div class="project-hero">
-                    <img src="assets/images/projet3/ecole-hero.jpg" alt="15 arrondissement">
+                    <img src="assets/images/projet2/realisations-hero.jpg" alt="Baboushka">
                     <!-- 📐 TAILLE RECOMMANDÉE : 1200x900px (ratio 4:3) -->
                 </div>
 
                 <!-- Genèse à droite (40%) -->
                 <div class="project-genesis">
-                    <h2>Genèse projet</h2>
-                    <p>Durant mon cursus étudiant, j'ai pu pendant 6 mois participer à des cours d'illustration, de direction artistique ainsi que de design au sein de l'école Intuit.lab située à Paris. J'ai aussi durant mon Erasmus réalisé plusieurs supports visuels nécessaires aux différents devoirs. Le programme TEMA à Neoma m'a également permis d'exprimer ma fibre créative.</p>
+                    <h2>Le projet</h2>
+                    <p>Depuis petite, je suis passionnée de dessin. J'ai pu explorer beaucoup de médiums, j'affectionne beaucoup l'aquarelle, l'acrylique et le dessin digital. En ce moment j'ai une légère obsession pour les marqueurs acryliques, qui permet d'expérimenter avec les couleurs et les formes. Chaque dessin est une nouvelle exploration créative.</p>
                 </div>
             </div>
 
             <!-- IMAGE PLEINE LARGEUR -->
             <div class="project-full-image">
-                <img src="assets/images/projet3/ecole-full.jpg" alt="affiches">
+                <img src="assets/images/projet2/realisations-full.jpg" alt="paysage aquarelle">
                 <!-- 📐 TAILLE RECOMMANDÉE : 1400x800px (ratio 16:9) -->
             </div>
 
             <!-- DESCRIPTION PROJET -->
             <div class="project-description">
-                <p>Ci-dessus, mes réalisations pour des devoirs concernant des affiches (pour un jeu imaginé ou encore le Hellfest). Ci-dessous, un des exercices que j'ai préférés : la création de pochettes de vinyles pour nos artistes préférés. C'est un des premiers exercices qui m'a vraiment poussée vers la découverte de soi et le test de différents styles visuels dont je n'avais pas l'habitude ni les codes.</p>
+                <p>Mon style de dessin est en constant changement, adaptable. J'aime le réalisme mais aussi le surréalisme et les dessins plus enfantins, "naïfs". La particularité de l'art qu'il nous permet de nous exprimer de milles et une façon.</p>
             </div>
 
             <!-- GALERIE 2x2 -->
             <div class="project-gallery">
                 <div class="gallery-item">
-                    <img src="assets/images/projet3/ecole-1.jpg" alt="Grimes">
+                    <img src="assets/images/projet2/realisations-1.jpg" alt="Fille dans l'eau acrylique">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet3/ecole-2.jpg" alt="Lil Peep">
+                    <img src="assets/images/projet2/realisations-2.jpg" alt="Chiot mignon acrylique">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet3/ecole-3.jpg" alt="The Neighbourhood">
+                    <img src="assets/images/projet2/realisations-3.jpg" alt="Chat de l'espace acrylique">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/projet3/ecole-4.jpg" alt="Tame Impala">
+                    <img src="assets/images/projet2/realisations-4.jpg" alt="Perle acrylique">
                     <!-- 📐 TAILLE RECOMMANDÉE : 800x800px (carré) -->
                 </div>
             </div>
