Correction-mini projets

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
                         <img src="assets/images/photo-lidia.png" alt="Photo Lidia">
                     </div>
                     <div class="about-intro-text">
-                        <p class="display">Depuis toujours, le dessin est mon langage : un moyen de donner forme aux émotions, raconter des histoires & d'illustrer un <span class="circle-about">projet</span>, une idée en univers visuel <span class="souslignage-about">unique</span>.</p>
-                        <p class="display">- <span class="highlight-bg">Lidia</span>, illustratrice & graphiste franco-polonaise.</p>
+                        <p class="display">Depuis toujours, le dessin est mon langage : un moyen de donner forme aux émotions, raconter des histoires et d'illustrer un <span class="circle-about">projet</span>, une idée en univers visuel <span class="souslignage-about">unique</span>.</p>
+                        <p class="display">- <span class="highlight-bg">Lidia</span>, illustratrice et graphiste franco-polonaise.</p>
                     </div>
                 </div>
             </section>
